--- a/Covauto.Applicatie/Covauto.Application.csproj
+++ b/Covauto.Applicatie/Covauto.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Covauto.Domain\Covauto.Domain.csproj" />
+    <ProjectReference Include="..\Covauto.Shared\Covauto.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
