--- a/Covauto.Client/Covauto.Client.csproj
+++ b/Covauto.Client/Covauto.Client.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Covauto.Shared\Covauto.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
