--- a/Covauto.Infrastructure/Covauto.Infrastructure.csproj
+++ b/Covauto.Infrastructure/Covauto.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Covauto.Domain\Covauto.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
