--- a/Covauto.API/Covauto.API.csproj
+++ b/Covauto.API/Covauto.API.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Covauto.Applicatie\Covauto.Application.csproj" />
     <ProjectReference Include="..\Covauto.Domain\Covauto.Domain.csproj" />
+    <ProjectReference Include="..\Covauto.Infrastructure\Covauto.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
