--- a/Covauto.Applicatie/Covauto.Application.csproj
+++ b/Covauto.Applicatie/Covauto.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Covauto.Domain\Covauto.Domain.csproj" />
+    <ProjectReference Include="..\Covauto.Infrastructure\Covauto.Infrastructure.csproj" />
     <ProjectReference Include="..\Covauto.Shared\Covauto.Shared.csproj" />
   </ItemGroup>
 
